# k-1-parsing

./: .cproject  .project  .sconsign.dblite  .~lock.model.csv#  CMakeCache.txt  CMakeLists.txt  HelperMethods.cpp  HelperMethods.h  Makefile  README.md  SConstruct  TesseractFinder.cc  TesseractFinder.h  cmake_install.cmake  executable  main.cc  main.cpp  model.csv
FormParser.xcodeproj/: project.pbxproj
FormParser.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
checkboxes/: .sconsign.dblite  SConstruct  checkbox.cc  concomp.h  main-detect-checkboxes.cc
csv/: CSVparser.cc
data/accuracy/expectedOutput/: 006 K1 Face Original .words.json  007 K1 Face Original .words.json  files.txt
data/accuracy/programOutput/: 002 K1 Face Original.json  006 K1 Face Original .json  007 K1 Face Original .json  files.txt
data/ocr_and_accuracy/expectedOutput/: 002 K1 Face Original.words.json
data/ocr_and_accuracy/programInput/: files.txt
data/ocr_and_accuracy/programOutput/: 002 K1 Face Original.json
data/processing/: README.md  bind.csv  groundTruthBindings.json  model.mdl
data/processing/groundTruth/: 001.K1.Face.AllDataEditable.REDACTED.fields.json  002.K1.Face.AllDataEditable.REDACTED.fields.json  003.K1.Face.AllDataEditable.REDACTED.fields.json  005.K1.Face.AllDataEditable.REDACTED.fields.json  006.K1.Face.AllDataEditable.REDACTED.fields.json  007.K1.Face.AllDataEditable.REDACTED.fields.json  012.K1.Face.AllDataEditable.REDACTED.fields.json  015.K1.Face.AllDataEditable.REDACTED.fields.json  029.K1.Face.AllDataEditable.REDACTED.fields.json  032.K1.Face.AllDataEditable.REDACTED.fields.json  036.K1.Face.AllDataEditable.REDACTED.fields.json  044.K1.Face.AllDataEditable.REDACTED.fields.json  048.K1.Face.AllDataEditable.REDACTED.fields.json  051.K1.Face.AllDataEditable.REDACTED.fields.json  054.K1.Face.AllDataEditable.REDACTED.fields.json  060.K1.Face.AllDataEditable.REDACTED.fields.json  063.K1.Face.AllDataEditable.REDACTED.fields.json  070.K1.Face.AllDataEditable.REDACTED.fields.json  079.K1.Face.AllDataEditable.REDACTED.fields.json  080.K1.Face.AllDataEditable.REDACTED.fields.json  081.K1.Face.AllDataEditable.REDACTED.fields.json  091.K1.Face.AllDataEditable.REDACTED.fields.json  093.K1.Face.AllDataEditable.REDACTED.fields.json  094.K1.Face.AllDataEditable.REDACTED.fields.json  095.K1.Face.AllDataEditable.REDACTED.fields.json  files.txt
data/processing/images/: files.txt
data/processing/output/: 001.K1.Face.Original.REDACTED.fields.json  001.K1.Face.Original.REDACTED_tree.json  002 K1 Face Original.fields.json  002 K1 Face Original_tree.json  002.K1.Face.AllDataEditable.REDACTED.pdf-0_extracted.json  006 K1 Face Original .fields.json  006 K1 Face Original _tree.json  006.K1.Face.AllDataEditable.REDACTED.pdf-0_extracted.json  007 K1 Face Original .fields.json  007 K1 Face Original _tree.json  007.K1.Face.AllDataEditable.REDACTED.pdf-0_extracted.json  (+59 more)
json/: jsoncpp.cc
output/: 0.json  1.json  10.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
src/: AccuracyProgram.cc  AccuracyProgram.cpp  AccuracyProgram.h  Configuration.cpp  Configuration.h  ConfigureProgram.cpp  ConfigureProgram.h  DocumentModel.cc  DocumentModel.h  EditDistance.cc  EditDistance.h  EditDistanceFinder.cc  EditDistanceFinder.h  FieldsExtracter.cc  FieldsExtracter.h  HelperMethods.cc  HelperMethods.cpp  HelperMethods.h  LineBreaker.cc  LineBreaker.cpp  LineBreaker.h  LineBreaker2.cc  LineBreaker2.cpp  Mapper.cc  Mapper.cpp  Mapper.h  MappingJob.cpp  MappingJob.h  NodesMapper.cc  NodesMapper.h  OcrEvaluation.cc  OcrEvaluation.h  OcrProgram.cc  OcrProgram.cpp  OcrProgram.h  PreProcessingHelperMethods.cc  PreProcessingHelperMethods.h  Preprocessor.cc  Preprocessor.h  Processor.cc  (+20 more)
src/Model/: InputNode.cc  InputNode.cpp  InputNode.h  MappingJob.cc  MappingJob.cpp  MappingJob.h  ModelBuilder.cc  ModelBuilder.cpp  ModelBuilder.h  ModelParser.cc  ModelParser.h  Node.cc  Node.cpp  Node.h  RepeatInputNode.cc  RepeatInputNode.h  TableNode.cc  TableNode.h  TextNode.cc  TextNode.cpp  TextNode.h
src/accuracy_test/: InputFieldsAccuracyTest.cc  InputFieldsAccuracyTest.cpp
src/checkboxes/: checkbox.cc  concomp.cc  main-detect-checkboxes.cc
src/common/: BasicLevenshteinDistance.cc  EditDistance.h  HelperMethods.cc  Preprocessor.cc  Preprocessor.h  TextDistanceInterface.h  TextualData.h
src/data_types/: TextualData.cc  TextualData.h
src/implementation/: BasicForm.cc  BasicForm.h  BasicTreeFormNode.cc  BasicTreeFormNode.h  DivisionRule.cc  DivisionRuleWithReference.h  InputTreeFormNode.cc  RepeatInputTreeFormNode.cc  TextTreeFormNode.cc  TreeFormModel.cc  TreeFormModel.h  TreeFormNodeProcessor.cc  TreeFormNodeProcessor.h  TreeFormProcessor.cc  TreeFormProcessor.h
src/interfaces/: FormModelInterface.h  LabelledTreeNodeInterface.h  RawFormInterface.h  RuleInterface.h  TreeFormModelInterface.h  TreeFormNodeInterface.h  TreeFormNodeProcessorInterface.h
src/ocr/: AccuracyProgram.h  OcrProgram.cc  OcrProgram.h  TesseractFinder.cc  TesseractFinder.h  TesseractFinderInterface.h  main.cc
src/parsing/: main.cc
src2/: mainTest.cpp
src2/accuracy_test/: InputFieldsAccuracyTest.cpp  InputFieldsAccuracyTest.h
src2/checkboxes/: checkbox.cc  checkbox.h
src2/implementation/: BasicForm.cpp  BasicForm.h  BasicTreeFormNode.cpp  BasicTreeFormNode.h  DivisionRule.cpp  DivisionRule.h  DivisionRuleWithReference.cpp  DivisionRuleWithReference.h  InputTreeFormNode.cpp  InputTreeFormNode.h  RepeatInputTreeFormNode.cpp  RepeatInputTreeFormNode.h  TableTreeFormNode.cpp  TableTreeFormNode.h  TextTreeFormNode.cpp  TextTreeFormNode.h  TreeFormIterator.cpp  TreeFormIterator.h  TreeFormModel.cpp  TreeFormModel.h  TreeFormNodeProcessor.cpp  TreeFormNodeProcessor.h  TreeFormProcessor.cpp  TreeFormProcessor.h
src2/interfaces/: FormModelInterface.h  FormProcessorInterface.h  LabelledTreeNodeInterface.h  RawFormInterface.h  RuleInterface.h  TreeFormModelInterface.h  TreeFormNodeInterface.h  TreeFormNodeProcessorInterface.h
tools/altotojson/: README.md  converter2.php
uncompiled_scripts/: data.txt  script1.cpp
(+60 files in other folders)
